# eXtended-Remote-Attestation

./: CMakeLists.txt
concept/: create_pdf_command  pr_faas_xra.tex
include/: XRA.h  XRA_error.h  XRA_internal.h  xra.h  xra_error.h
src/: XRA_t.c  core.c
